<resources>
    <string name="app_name">BookPdf</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="your_downloads">Your Downloads</string>
    <string name="exit">Exit</string>
    <string name="downloads">Downloads</string>
    <string name="select_an_option">Select an option</string>
    <string name="search_a_book">Search a book</string>
    <string name="edit_txt_search_hint">Enter a book name</string>
    <string name="txt_dialog_exit_title">Are you sure you want to Exit?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="txt_exit_confirmation">Are you sure you want to exit?</string>
    <string name="pages">Pages</string>
    <string name="year">Year</string>
    <string name="size">Size</string>
    <string name="total_downloads">Total Downloads</string>
    <string name="author">Author</string>
    <string name="download">Download</string>
    <string name="language">Language</string>
    <string name="info_not_available">Information Not Available</string>
    <string name="no_downloads_available">No Downloads Available</string>
    <string name="share_book">Share Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="discover_more">Discover More</string>

    <string name="fb_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fb_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fb_app_id" translatable="false">1070742289975147</string>
    <string name="testDeviceID" translatable="false">6a3a6a6d-d3a7-4440-96fa-024cf649e030</string>
    <string name="ad_unit_id_banner">ca-app-pub-2490122222099291/8917977122</string>
    <string name="ad_unit_id_interstitial">ca-app-pub-2490122222099291/9374284455</string>
    <string name="ad_unit_reward">ca-app-pub-2490122222099291/7486487719</string>
</resources>
