<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/category"/>
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"/>
        <item
            android:id="@+id/downloads"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/your_downloads"/>
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit"/>
    </group>
</menu>
